ecom-backend apply utils